# OOP-2021

./: .gitignore  README.md  test.cpp  test2.cpp  test2.txt
Exam/: 82213.cpp
Exam Prep/: Component.cpp  Component.h  ComponentType.h  Configuration.cpp  Configuration.h  Cpu.cpp  Cpu.h  Memory.cpp  Memory.h  Utils.cpp  Utils.h  main.cpp
Exam Prep/version2/: Component.cpp  Component.h  Configuration.cpp  Configuration.h  Cpu.cpp  Cpu.h  Memory.cpp  Memory.h  Utils.cpp  Utils.h  main.cpp
Homework01/: CMakeLists.txt  Garage.cpp  Garage.h  Garage_tests.cpp  MyString.cpp  MyString.h  MyString_tests.cpp  Vehicle.cpp  Vehicle.h  VehicleAllocator.cpp  VehicleAllocator.h  VehicleAllocator_tests.cpp  Vehicle_tests.cpp  main.cpp  tests_MyString.cpp
Homework02/: Database.h  Person.cpp  Person.h  Registration.cpp  Registration.h  Vehicle.cpp  Vehicle.h
K1/: 82213.cpp
Practikums/Abstract Classes/: Car.cpp  Car.h  Engine.cpp  Engine.h  FamilyCar.cpp  FamilyCar.h  SportsCar.cpp  SportsCar.h  Vehicle.h  main.cpp
Practikums/Classes/: Tasks.txt
Practikums/Constructors and Exceptions/: Computer.cpp  Computer.h  ComputerShop.cpp  ComputerShop.h  Readme.md  Utility.cpp  Utility.h
Practikums/Multiple inheritance/: Lecturer.cpp  Lecturer.h  Person.cpp  Person.h  Readme.md  Student.cpp  Student.h  facultyMember.cpp  facultyMember.h  input.txt  main.cpp  output.txt
Seminars/: CMakeLists.txt
Seminars/Classes/Task01/: CMakeLists.txt  Person.cpp  Person.h  Utils.cpp  Utils.h  main.cpp
Seminars/Classes/Task01/Task02/: Car.cpp  Parking.h  Person.cpp  Person.h
(+297 files in other folders)
